--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,36 +3,36 @@
 @tailwind utilities;
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+	.text-balance {
+		text-wrap: balance;
+	}
 }
 
 html {
-  background: black;
+	background: white;
 }
 
 .table tbody tr td {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 }
 
 .table tbody tr:nth-child(even) td {
-  background-color: #cbe4de;
+	background-color: #cbe4de;
 }
 
 .rounded-header th {
-  background-color: #0e8388;
+	background-color: #0e8388;
 }
 
 .rounded-header th:first-child,
 .table tbody tr:nth-child(even) td:first-child {
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
+	border-top-left-radius: 0.5rem;
+	border-bottom-left-radius: 0.5rem;
 }
 
 .rounded-header th:last-child,
 .table tbody tr:nth-child(even) td:last-child {
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+	border-top-right-radius: 0.5rem;
+	border-bottom-right-radius: 0.5rem;
 }
